# langchain-first-step

./: .gitignore  README.md  langchain-first-step.ipynb  llm-as-coach.py  pyproject.toml
